# streams

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindMiniz.cmake  FindTinyAES.cmake
include/streams/: astream.h  bstream.h  zlstream.h  zsstream.h  zstream.h
include/zstream/: astream.h  bstream.h  zstream.h
src/: CMakeLists.txt
src/streams/: astream.cpp  bstream.cpp  zlstream.cpp  zsstream.cpp  zstream.cpp
src/zstream/: astream.cpp  bstream.cpp  zstream.cpp
tests/: CMakeLists.txt  test_a.cpp  test_b.cpp  test_z.cpp  test_z_comparison.cpp  test_za.cpp  test_zl.cpp  test_zl_a.cpp  test_zs.cpp
